<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:isScrollContainer="true"
        android:padding="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro_registrar"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/registryEmailET"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/registryEmailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/registro_email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/registryNameET"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/registryNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/registro_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/registryCountryET"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registryEmailET" />

        <EditText
            android:id="@+id/registryCountryET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/registro_pais"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/registryPasswordET"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registryNameET" />

        <EditText
            android:id="@+id/registryPasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/registro_pass"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/registryRePasswordET"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registryCountryET" />

        <EditText
            android:id="@+id/registryRePasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/registro_repass"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registryPasswordET" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/registryButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:includeFontPadding="false"
        android:text="@string/registro_registrar"
        app:layout_constraintBottom_toTopOf="@+id/fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <fragment
        android:id="@+id/fragment"
        android:name="com.simplelifestudio.cocinando.fragment.FacebookLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        app:layout_constraintBottom_toTopOf="@+id/registryGoogleBT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registryButton" />

    <Button
        android:id="@+id/registryGoogleBT"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:includeFontPadding="false"
        android:text="@string/registro_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment" />



</androidx.constraintlayout.widget.ConstraintLayout>