<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/debugBienvenidaTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_bienvenidos"
            android:textSize="36sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/debugImageIV"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:contentDescription="@string/img_contetDescription"
            tools:srcCompat="@color/colorPrimary" />

        <TextView
            android:id="@+id/debugNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/debugDatosUserTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/com_facebook_button_background_color_focused_disabled"
            android:gravity="center_horizontal"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/debugLogoutBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/logout" />

    </LinearLayout>
</ScrollView>

