<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_bienvenidos"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/welcomeLlContainerLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/welcomeViewPagerVP"
            android:layout_width="wrap_content"
            android:layout_height="100dp" />

        <LinearLayout
            android:id="@+id/welcomeDotsLY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/welcomeIniciarBT"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/welcome_iniciar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/welcomeRegistrarBT"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeLlContainerLL" />

    <Button
        android:id="@+id/welcomeRegistrarBT"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/welcome_registro"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/welcomeIniciarBT"
        app:layout_constraintTop_toBottomOf="@+id/welcomeLlContainerLL" />

</androidx.constraintlayout.widget.ConstraintLayout>